--- a/lib/fontcustom/templates/fontcustom.yml
+++ b/lib/fontcustom/templates/fontcustom.yml
@@ -1,96 +1,73 @@
-# =============================================================================
-# Font Custom Configuration
-#   This file should live in the directory where you run `fontcustom compile`.
-#   For more info, visit <https://github.com/FontCustom/fontcustom>.
-# =============================================================================
+/*
+ * grunt-fontcustom
+ * https://github.com/MoOx/grunt-fontcustom
+ *
+ * Copyright (c) 2013 Maxime Thirouin, contributors
+ * Licensed under the MIT license.
+ */
 
+'use strict';
 
-# -----------------------------------------------------------------------------
-# Project Info
-# -----------------------------------------------------------------------------
+module.exports = function (grunt) {
+  var fs = require('fs');
+  var tmp = require('tmp');
 
-# The font's name. Also determines the file names of generated templates.
-#font_name: icons
+  function compile(args, cb) {
+    var child = grunt.util.spawn({
+      cmd: 'fontcustom',
+      args: args
+    }, function (err, result, code) {
+      if (code === 127) {
+        return grunt.warn(
+          'You need to have Ruby and Fontcustom installed ' +
+          'and in your system PATH for this task to work. ' +
+          'More info: https://github.com/MoOx/grunt-fontcustom'
+        );
+      }
+      cb();
+    });
+    child.stdout.pipe(process.stdout);
+    child.stderr.pipe(process.stderr);
+  }
 
-# Format of CSS selectors. {{glyph}} is substituted for the glyph name.
-#css_selector: .i-{{glyph}}
+  grunt.registerMultiTask('fontcustom', 'Compile SVG and EPS to Fonts (and CSS)', function () {
+    var args = ['compile'];
+    var helpers = require('grunt-lib-contrib').init(grunt);
+    var options = this.options();
+    var cb = this.async();
+    var src;
 
-# Generate fonts without asset-busting hashes.
-#no_hash: true
+    grunt.verbose.writeflags(options, 'Options');
+    
+    if (!options.src) {
+      grunt.fail.fatal('Missing options `src`');
+    }
+    src = options.src;
+    
+    if (options.dest) {
+      args.push('--output', options.dest);
+    }
+      if (options.name) {
+          args.push('--font-name', options.name);
+      }
 
-# Encode WOFF fonts into the generated CSS.
-#base64: true
+      if (options.nohash) {
+          args.push('--no-hash');
+      }      
 
-# Forces compilation, even if inputs have not changed
-#force: true
+      args.push('--debug');
 
-# Display (possibly useful) debugging messages.
-#debug: true
+    // don't want these as CLI flags
+    delete options.src;
+    delete options.dest;
+    delete options.name;
+    delete options.nohash;
 
-# Hide status messages.
-#quiet: true
-
-
-# -----------------------------------------------------------------------------
-# Input / Output Locations
-#   You can save generated fonts, CSS, and other files to different locations
-#   here. Font Custom can also read input vectors and templates from different
-#   places.
-#
-#   NOTE:
-#   - Be sure to preserve the whitespace in these YAML hashes.
-#   - INPUT[:vectors] and OUTPUT[:fonts] are required. Everything else is
-#     optional.
-#   - Specify output locations for custom templates by including their file
-#     names as the key.
-# -----------------------------------------------------------------------------
-
-#input:
-#  vectors: my/vectors
-#  templates: my/templates
-
-#output:
-#  fonts: app/assets/fonts
-#  css: app/assets/stylesheets
-#  preview: app/views/styleguide
-#  my-custom-template.yml: path/to/template/output
-
-
-# -----------------------------------------------------------------------------
-# Templates
-#   A YAML array of templates and files to generate alongside fonts. Custom
-#   templates should be saved in the INPUT[:templates] directory and referenced
-#   by their base file name.
-#
-#   For Rails and Compass templates, set `preprocessor_path` as the relative
-#   path from OUTPUT[:css] to OUTPUT[:fonts]. By default, these are the same
-#   directory.
-#
-#   Included in Font Custom: preview, css, scss, scss-rails
-#   Default: css, preview
-# -----------------------------------------------------------------------------
-
-#templates:
-#- scss-rails
-#- preview
-#- my-custom-template.yml
-
-#preprocessor_path: ../fonts/
-
-
-# -----------------------------------------------------------------------------
-# Font Settings (defaults shown)
-# -----------------------------------------------------------------------------
-
-# Size (in pica points) for which your font is designed.
-#font_design_size: 16
-
-# The em size. Setting this will scale the entire font to the given size.
-#font_em: 512
-
-# The font's descent and descent. Used to calculate the baseline.
-#font_ascent: 448
-#font_descent: 64
-
-# Horizontally fit glyphs to their individual vector widths.
-#autowidth: false
+    // add converted options
+    [].push.apply(args, helpers.optsToArgs(options));
+    
+    args.push(src);
+    
+    compile(args, cb);
+  });
+};
